--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 qtpass (0.9) git; urgency=low
 
-  * Initial Test Release
+  * Release candidate
 
  -- Anne Jan Brouwer <brouwer@annejan.com>  Wed, 13 May 2015 16:51:09 +0200
 
+ -- Anne Jan Brouwer (JinX) <brouwer@annejan.com>  Thu, 30 Jul 2015 16:27:11 +0200
