Apparently the man was completely wrong

--- a/qtpass.1
+++ b/qtpass.1
@@ -2,7 +2,7 @@
 .SH NAME
 qtpass \- GUI for password manager pass
 .SH SYNOPSIS
-\fBqtpass\fP [directory of the password\-store]
+\fBqtpass\fP [fuzzy name]
 .SH DESCRIPTION
 \fBQtPass\fP is a GUI password manager based on pass with the following
  features:
